--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
 
   image_picker: ^0.8.7+4
   dio: ^5.1.2
-
   http: ^0.13.6
+  nfc_manager: ^3.2.0
 
 dev_dependencies:
   flutter_test:
