--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.1.2
   http: ^0.13.6
   nfc_manager: ^3.2.0
+  dropdown_button2: ^2.1.2
 
 dev_dependencies:
   flutter_test:
