--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   device_info_plus: ^9.0.0
   package_info_plus: ^4.0.0
-
   image_picker: ^0.8.7+4
   dio: ^5.1.2
   http: ^0.13.6
   nfc_manager: ^3.2.0
   dropdown_button2: ^2.1.2
+
+  photo_view: ^0.14.0
+  android_id: ^0.3.3
 
 dev_dependencies:
   flutter_test:
