--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,11 @@ dependencies:
   http: ^0.13.6
   nfc_manager: ^3.2.0
   dropdown_button2: ^2.1.2
+  android_id: ^0.3.3
+  sn_progress_dialog: ^1.1.3
+  flutter_smart_dialog: ^4.9.0+6
 
   photo_view: ^0.14.0
-  android_id: ^0.3.3
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
+    - assets/loading/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
