--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,13 @@ dependencies:
   android_id: ^0.3.3
   sn_progress_dialog: ^1.1.3
   flutter_smart_dialog: ^4.9.0+6
+  easy_image_viewer: ^1.2.0
 
   photo_view: ^0.14.0
+  dropdownfield2: ^1.0.7
+  #  image_zoomer: ^0.0.3
+  #  insta_image_viewer: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
