--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   easy_image_viewer: ^1.2.0
   permission_handler: ^10.2.0
   flutter_launcher_icons: ^0.13.1
-
+  yaml: ^3.1.2
 
   photo_view: ^0.14.0
   dropdownfield2: ^1.0.7
