--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,35 +11,37 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.2
   device_info_plus: ^9.0.0
   package_info_plus: ^4.0.0
+  android_id: ^0.3.3
+  permission_handler: ^10.2.0
+
   image_picker: ^0.8.7+4
+  camera_camera: ^3.0.0
+  easy_image_viewer: ^1.2.0
+  zoom_pinch_overlay: ^1.4.1+3
+  audioplayers: ^5.0.0
+
   dio: ^5.1.2
   http: ^0.13.6
   nfc_manager: ^3.2.0
+  sqflite: ^2.2.8+4
+
   dropdown_button2: ^2.1.2
-  android_id: ^0.3.3
   sn_progress_dialog: ^1.1.3
   flutter_smart_dialog: ^4.9.0+6
-  easy_image_viewer: ^1.2.0
-  permission_handler: ^10.2.0
-  flutter_launcher_icons: ^0.13.1
+
+
+  intl: ^0.18.1
   yaml: ^3.1.2
-
-  photo_view: ^0.14.0
+#  photo_view: ^0.14.0
   dropdownfield2: ^1.0.7
-  #  image_zoomer: ^0.0.3
-  #  insta_image_viewer: ^1.0.2
-  image: any
+#  image: any
+  #  flutter_launcher_icons: ^0.13.1
+  #  thumbnailer: ^2.2.0
+  image_watermark: ^0.0.5
 
-#  thumbnailer: ^2.2.0
-#  pdfx: ^2.3.0
-#  device_info_plus: ^4.0.0
-#  package_info_plus: any
-
-  sqflite: ^2.2.8+4
 
 dev_dependencies:
   flutter_test:
