--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,21 +17,26 @@ dependencies:
   android_id: ^0.3.3
   permission_handler: ^10.2.0
 
+  path: ^1.8.3
+  path_provider: ^2.0.15
+  camera: ^0.10.5+2
   image_picker: ^0.8.7+4
-  camera_camera: ^3.0.0
   easy_image_viewer: ^1.2.0
   zoom_pinch_overlay: ^1.4.1+3
   audioplayers: ^5.0.0
+  stamp_image: ^0.0.2
 
   dio: ^5.1.2
   http: ^0.13.6
   nfc_manager: ^3.2.0
   sqflite: ^2.2.8+4
+  image: ^4.0.17
 
   dropdown_button2: ^2.1.2
   sn_progress_dialog: ^1.1.3
   flutter_smart_dialog: ^4.9.0+6
 
+  flutter_cupertino_datetime_picker: ^3.0.0
 
   intl: ^0.18.1
   yaml: ^3.1.2
@@ -40,7 +45,7 @@ dependencies:
 #  image: any
   #  flutter_launcher_icons: ^0.13.1
   #  thumbnailer: ^2.2.0
-  image_watermark: ^0.0.5
+#  image_watermark: ^0.0.5
 
 
 dev_dependencies:
