--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   camera: ^0.10.5+2
   gallery_saver: ^2.3.2
 
+  photo_view: ^0.14.0
+  #only for url
+  galleryimage: ^2.0.1
+
   image_picker: ^0.8.7+4
   easy_image_viewer: ^1.2.0
   zoom_pinch_overlay: ^1.4.1+3
