--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,24 +19,29 @@ dependencies:
 
   path: ^1.8.3
   path_provider: ^2.0.15
+
+  http: ^0.13.6
+  dio: ^5.1.2
+
+  nfc_manager: ^3.2.0
+  sqflite: ^2.2.8+4
+
   camera: ^0.10.5+2
+  native_shutter_sound: ^0.0.1 #相機快門聲音
+
+  image: ^4.0.17
+  photo_view: ^0.14.0
   gallery_saver: ^2.3.2
 
-  photo_view: ^0.14.0
-  #only for url
-  galleryimage: ^2.0.1
+  galleryimage: ^2.0.1 #only for url
 
   image_picker: ^0.8.7+4
   easy_image_viewer: ^1.2.0
   zoom_pinch_overlay: ^1.4.1+3
   audioplayers: ^5.0.0
-  stamp_image: ^0.0.2
+#  stamp_image: ^0.0.2
 
-  dio: ^5.1.2
-  http: ^0.13.6
-  nfc_manager: ^3.2.0
-  sqflite: ^2.2.8+4
-  image: ^4.0.17
+
 
   dropdown_button2: ^2.1.2
   sn_progress_dialog: ^1.1.3
@@ -46,12 +51,8 @@ dependencies:
 
   intl: ^0.18.1
   yaml: ^3.1.2
-#  photo_view: ^0.14.0
+
   dropdownfield2: ^1.0.7
-#  image: any
-  #  flutter_launcher_icons: ^0.13.1
-  #  thumbnailer: ^2.2.0
-#  image_watermark: ^0.0.5
 
 
 dev_dependencies:
