--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   sqflite: ^2.2.8+4
 
   camera: ^0.10.5+2
+  video_player: ^2.7.1 #錄影使用
   native_shutter_sound: ^0.0.1 #相機快門聲音
 
   image: ^4.0.17
@@ -35,11 +36,17 @@ dependencies:
 
   galleryimage: ^2.0.1 #only for url
 
+  external_path: ^1.0.3
+
+
+
+
+
+
   image_picker: ^0.8.7+4
   easy_image_viewer: ^1.2.0
   zoom_pinch_overlay: ^1.4.1+3
-  audioplayers: ^5.0.0
-#  stamp_image: ^0.0.2
+  audioplayers: ^5.1.0
 
 
 
